--- a/style.css
+++ b/style.css
@@ -150,6 +150,9 @@ nav {
     padding-left: 7px;
     padding-top: 7px;
 }
+.sc-2sd:hover {
+    border: 1px solid rgb(63, 1, 96);
+}
 .sd-1 {
     width: 100.5%;
     background: linear-gradient(to left, #fac9e6 0%, #d4aefc 100%);
@@ -179,16 +182,98 @@ nav {
 .dr-sec {
     width: 50%;
 }
-.accordion {
+.eni {
     width: 440%;
     margin-left: -150px;
 }
-.accordion-item {
-    color: gray;
-    background-color: transparent;
-    border: 1px solid rgb(165, 212, 250);
-  }
+.accordion {
+  --bs-accordion-color: var(--bs-body-color);
+  --bs-accordion-bg: var(--bs-body-bg);
+  --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
+  --bs-accordion-border-color: var(--bs-border-color);
+  --bs-accordion-border-width: var(--bs-border-width);
+  --bs-accordion-border-radius: var(--bs-border-radius);
+  --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
+  --bs-accordion-btn-padding-x: 1.25rem;
+  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-btn-color: var(--bs-body-color);
+  --bs-accordion-btn-bg: var(--bs-accordion-bg);
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+}
+button:focus:not(:focus-visible) {
+  outline: none;
+}
+.accordion-button:focus {
+  z-index: none;
+  border-color: none;
+  outline: none;
+  box-shadow: none;
+}
+
+button:focus:not(:focus-visible) {
+  outline: 0;
+}
+.accordion-button:focus {
+  z-index: none;
+  border-color: none;
+  outline: none;
+  box-shadow: none;
+}
+.accordion-button:hover {
+  z-index: none;
+
+}
+.accordion-button:not(.collapsed) {
+  color: none;
+  background-color: transparent;
+  box-shadow: none;
+}
+.allbt {
+  color: gray;
+  background-color: transparent;
+  border: 1px solid rgb(184, 214, 241);
+}
 .accordion-button {
     background-color: transparent;
     height: 55px;
+    color: rgb(164, 164, 164);
+}
+.accordion-button h6 {
+    color: rgb(160, 160, 160);
+}
+/* First box end */
+.sc-3 {
+    height: 500px;
+    margin-top: -30px;
+}
+.sc-3sd {
+    background: linear-gradient(to right, #FBCFE8 10%, #edd1fb 90%);
+    width: 76.3%;
+    padding-left: 7px;
+    padding-top: 7px;
+    background-position: center;
+}
+.sc-3sd:hover {
+    border: 1px solid rgb(63, 1, 96);
+}
+.dr-sec2 {
+    width: 100%;
+}
+.sec-d2 {
+    width: 98%;
+}
+.sec-img {
+    margin-right: 200px;
+}
+.sec-img img {
+    width: 168%;
+    height: 350px;
 }
