first box section

--- a/style.css
+++ b/style.css
@@ -61,6 +61,13 @@ nav {
     border: 1px solid rgb(63, 1, 96);
     border-top: none;
 }
+/* main */
+.alls {
+    background: linear-gradient(to left, #F3E9FE 0%, #FCE7F3 100%);
+}
+.mmt {
+    margin-top: 35px;
+}
   /* card */
 .crd {
     margin: -22px 8px 0px 8px;
@@ -75,6 +82,8 @@ nav {
 }
 .cd:hover {
     border: 1px solid rgb(14, 184, 14);
+    scale: 1.05;
+    transition: .5s;
 }
 .ccr {
     margin-top: 38px;
@@ -140,21 +149,25 @@ nav {
 }
 /* card end */
 .sc-2 {
-    height: 500px;
+    /* height: 500px; */
     width: 100%;
-    background: linear-gradient(to left, #FCE7F3, #F3E8FF 100%);
 }
 .sc-2sd {
     background: linear-gradient(to right, #FBCFE8 10%, #edd1fb 90%);
     width: 76.3%;
     padding-left: 7px;
     padding-top: 7px;
+    padding-bottom: 10px;
 }
-.sc-2sd:hover {
-    border: 1px solid rgb(63, 1, 96);
+.bb {
+    margin-left: 5px;
+}
+.bb:hover {
+    border: 1px solid rgb(97, 21, 138);
+    border-radius: 0px 0px 10px 10px;
 }
 .sd-1 {
-    width: 100.5%;
+    width: 100%;
     background: linear-gradient(to left, #fac9e6 0%, #d4aefc 100%);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
@@ -177,81 +190,37 @@ nav {
     width: 76.3%;
 }
 .dr-img img {
-    width: 75%;
+    width: 105%;
+    height: 60vh;
 }
 .dr-sec {
     width: 50%;
 }
 .eni {
-    width: 440%;
+    width: 448%;
     margin-left: -150px;
-}
-.accordion {
-  --bs-accordion-color: var(--bs-body-color);
-  --bs-accordion-bg: var(--bs-body-bg);
-  --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
-  --bs-accordion-border-color: var(--bs-border-color);
-  --bs-accordion-border-width: var(--bs-border-width);
-  --bs-accordion-border-radius: var(--bs-border-radius);
-  --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
-  --bs-accordion-btn-padding-x: 1.25rem;
-  --bs-accordion-btn-padding-y: 1rem;
-  --bs-accordion-btn-color: var(--bs-body-color);
-  --bs-accordion-btn-bg: var(--bs-accordion-bg);
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-icon-width: 1.25rem;
-  --bs-accordion-btn-icon-transform: rotate(-180deg);
-  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-accordion-body-padding-x: 1.25rem;
-  --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
-}
-button:focus:not(:focus-visible) {
-  outline: none;
-}
-.accordion-button:focus {
-  z-index: none;
-  border-color: none;
-  outline: none;
-  box-shadow: none;
-}
-
-button:focus:not(:focus-visible) {
-  outline: 0;
-}
-.accordion-button:focus {
-  z-index: none;
-  border-color: none;
-  outline: none;
-  box-shadow: none;
-}
-.accordion-button:hover {
-  z-index: none;
-
-}
-.accordion-button:not(.collapsed) {
-  color: none;
-  background-color: transparent;
-  box-shadow: none;
 }
 .allbt {
   color: gray;
   background-color: transparent;
   border: 1px solid rgb(184, 214, 241);
 }
-.accordion-button {
-    background-color: transparent;
-    height: 55px;
-    color: rgb(164, 164, 164);
+.bbtn {
+    width: 160%;
+    padding: 15px 0px 15px 15px;
+    margin-left: 35px;
+    color: gray;
 }
-.accordion-button h6 {
-    color: rgb(160, 160, 160);
+.bbtn:hover {
+    color: gray;
+}
+.pbt {
+    width: 160%;
+    padding: 10px;
+    
 }
 /* First box end */
 .sc-3 {
-    height: 500px;
     margin-top: -30px;
 }
 .sc-3sd {
@@ -259,21 +228,212 @@ button:focus:not(:focus-visible) {
     width: 76.3%;
     padding-left: 7px;
     padding-top: 7px;
+    padding-bottom: 10px;
     background-position: center;
 }
-.sc-3sd:hover {
-    border: 1px solid rgb(63, 1, 96);
-}
-.dr-sec2 {
+.sdd-1 {
     width: 100%;
+    background: linear-gradient(to left, #fac9e6 0%, #d4aefc 100%);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.sec-d2 {
-    width: 98%;
+.sdd-1 a {
+    background-color: rgb(248, 109, 88);
+    height: 37px;
+    padding: 0px 10px;
 }
-.sec-img {
-    margin-right: 200px;
+.sdd-1 a:hover {
+    color: #FFFFFF;
+    background-color: #6511c5;
+}
+.bbtnn {
+    width: 160%;
+    padding: 15px 0px 15px 15px;
+    color: gray;
+}
+.bbtnn:hover {
+    color: gray;
 }
 .sec-img img {
-    width: 168%;
-    height: 350px;
+    width: 73%;
+    height: 60vh;
+    margin-left: 190px;
 }
+/* second section end */
+.xxs {
+    margin-top: 5px;
+}
+/* third section end */
+.ii img {
+    width: 74.5%;
+}
+/* h details section start */
+.ltbanner {
+    margin-top: 10px;
+    height: auto;
+}
+.ltbanner img {
+    width: 85%;
+    height: 70vh;
+}
+
+
+.accordion {
+    --bs-accordion-color: var(--bs-body-color);
+    --bs-accordion-bg: none;
+    --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
+    --bs-accordion-border-color: var(--bs-border-color);
+    --bs-accordion-border-width: var(--bs-border-width);
+    --bs-accordion-border-radius: var(--bs-border-radius);
+    --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
+    --bs-accordion-btn-padding-x: 1.25rem;
+    --bs-accordion-btn-padding-y: 1rem;
+    --bs-accordion-btn-color: var(--bs-body-color);
+    --bs-accordion-btn-bg: none;
+    --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    --bs-accordion-btn-icon-width: 1.25rem;
+    --bs-accordion-btn-icon-transform: rotate(-180deg);
+    --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-accordion-body-padding-x: 1.25rem;
+    --bs-accordion-body-padding-y: 1rem;
+    --bs-accordion-active-color: var(--bs-secondary);
+  }
+  button:focus:not(:focus-visible) {
+    outline: none;
+  }
+  .accordion-button:focus {
+    z-index: none;
+    border-color: none;
+    outline: none;
+    box-shadow: none;
+  }
+  
+  button:focus:not(:focus-visible) {
+    outline: 0;
+  }
+  .accordion-button:focus {
+    z-index: none;
+    border-color: none;
+    outline: none;
+    box-shadow: none;
+  }
+  .accordion-button:hover {
+    z-index: none;
+  
+  }
+  .accordion-button:not(.collapsed) {
+    color: none;
+    background-color: transparent;
+    box-shadow: none;
+  }
+  .allbt {
+    color: gray;
+    background-color: transparent;
+    border: 1px solid rgb(184, 214, 241);
+  }
+  .accordion-button {
+      background-color: transparent;
+      height: 55px;
+      color: rgb(164, 164, 164);
+  }
+  .accordion-button h6 {
+      color: rgb(160, 160, 160);
+  }
+  .acc {
+    margin-left: 74px;
+    width: 85.5%;
+    background-color: transparent;
+  }
+/* h details section end */
+/* last card start */
+.lstcard {
+    margin-top: 13px;
+}
+.ccrrdd {
+    border: none;
+    border-radius: none;
+    --bs-card-border-radius: none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background: linear-gradient(to right, #FBCFE8 10%, #edd1fb 90%);
+}
+.ccrrd {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background: linear-gradient(to right, #FBCFE8 10%, #edd1fb 90%);
+}
+.ccrrdd:hover {
+    scale: 1.04;
+    transition: .3s;
+}
+.ccrrd:hover {
+    scale: 1.03;
+    transition: .25s;
+}
+.ccrrd img {
+    width: 100%;
+    height: 27vh;
+    margin-top: 47px;
+}
+.ccrrdd img {
+    width: 100%;
+    height: 27vh;
+    margin-top: 47px;
+}
+.ctx {
+    height: 10px;
+}
+.ctx p {
+    font-size: 12px;
+    color: rgb(141, 141, 141);
+    margin-top: -10px;
+}
+.pst {
+    font-size: 13px;
+    background-color: #DBEAFE;
+    color: rgb(141, 141, 141);
+    font-weight: bolder;
+    width: 100% ;
+    height: 50px;
+    position: absolute;
+    z-index: 1;
+}
+/* last card end */
+/* communication start */
+.cmm {
+    border-right: 2px solid gray;
+    height: 60vh;
+    margin-left: 220px;
+}
+.cm-img img {
+    width: 100%;
+    height: 60vh;
+    
+}
+/* communication end */
+/* footer start */
+.fftt {
+    width: 76.5%;
+    background: linear-gradient(to left, #C084FC 7% , #52D983 81% , #fda3d2 98%);
+}
+.fter {
+    border: 4px solid white;
+    height: 170px;
+    width: 35%;
+    margin: auto;
+    border-radius: 15px;
+}
+.fter img {
+    height: auto;
+    width: 100%;
+}
+.llii {
+    margin: auto;
+    height: 2px;
+    width: 32%;
+    margin-top: 20px;
+    background-color: gray;
+}
+.lsd p {
+    margin-bottom: 0;
+}
+/* footer end */
