--- a/style.css
+++ b/style.css
@@ -402,23 +402,51 @@ nav {
 .cmm {
     border-right: 2px solid gray;
     height: 60vh;
-    margin-left: 220px;
+    margin-left: 80px;
 }
 .cm-img img {
     width: 100%;
     height: 60vh;
     
 }
+.sc-3sdd {
+    background-color: #E9D5FF;
+    width: 76.3%;
+    padding-left: 7px;
+    padding-top: 7px;
+    padding-bottom: 10px;
+    background-position: center;
+}
+.alic {
+    margin-right: 70px;
+}
+.iicc img {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    border-radius: 0px 0px 8px 8px;
+    
+}
+.iiccc {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    border-radius: 0px 0px 8px 8px;
+}
+.iicc:hover {
+    border-radius: 0px 0px 8px 8px;
+    border: 1px solid yellow;
+}
+.iicc img:hover {
+    scale: 1.02;
+    transition: .5s;
+}
 /* communication end */
 /* footer start */
 .fftt {
     width: 76.5%;
-    background: linear-gradient(to left, #C084FC 7% , #52D983 81% , #fda3d2 98%);
+    background: linear-gradient(to left, #cea1fa 7% , #8ff5b4 70% , #fda3d2 98%);
 }
 .fter {
     border: 4px solid white;
-    height: 170px;
-    width: 35%;
+    height: 140px;
+    width: 38%;
     margin: auto;
     border-radius: 15px;
 }
@@ -429,7 +457,7 @@ nav {
 .llii {
     margin: auto;
     height: 2px;
-    width: 32%;
+    width: 35%;
     margin-top: 20px;
     background-color: gray;
 }
